--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-/lib/firebase_options.dart
+/gilib/firebase_options.dart
 
 # Symbolication related
 app.*.symbols
