--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-/gilib/firebase_options.dart
+/lib/firebase_options.dart
 
 # Symbolication related
 app.*.symbols
