--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_analytics: ^11.5.0
   printing: ^5.10.6   
   pdf: ^3.11.3 
+  intl: ^0.20.2 
 
 dev_dependencies:
   flutter_test:
