--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   printing: ^5.10.6   
   pdf: ^3.11.3 
   intl: ^0.20.2 
+  fl_chart: ^0.70.0
 
 dev_dependencies:
   flutter_test:
