email sending using after registration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,7 +72,7 @@ flutter:
   assets:
     - assets/images/background.jpg
     - assets/images/ministry.jpg
-    - assets/images/patientdatabackg.jpg
+    - assets/images/patientdatabackg.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
