untracking the sendgridmaller file

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ migrate_working_dir/
 .pub/
 /build/
 /lib/firebase_options.dart
-/sendgrid_mailer/.env
+/sendgrid_mailer
 
 # Symbolication related
 app.*.symbols
