commit the .ignorefolder

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ migrate_working_dir/
 /build/
 /lib/firebase_options.dart
 /sendgrid_mailer
+/sendgrid_mailer/.env
 
 # Symbolication related
 app.*.symbols
