--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ migrate_working_dir/
 /lib/firebase_options.dart
 /sendgrid_mailer
 /sendgrid_mailer/.env
+firebase.json
 
 # Symbolication related
 app.*.symbols
